# rl-arena-executor

./: .env.example  .gitignore  Dockerfile  Dockerfile.orchestrator  Makefile  PROJECT_SUMMARY.md  README.md  executor_pb2.py  executor_pb2_grpc.py  pyproject.toml  requirements.txt  run_executor.py
config/: limits.yaml
docs/: AGENT_IMAGE_GUIDE.md  K8S_ARCHITECTURE.md  K8S_SETUP.md
examples/: test_executor.py
executor/: __init__.py  config.py  executor_pb2.py  executor_pb2.pyi  executor_pb2_grpc.py  k8s_runner.py  match_runner.py  redis_semaphore.py  replay_recorder.py  sandbox.py  server.py  utils.py  validation.py
k8s/: SERVICE_SETUP.md  deployment.yaml
orchestrator/: run_match.py
proto/: executor.proto
tests/: __init__.py  test_match_runner.py  test_sandbox.py  test_validation.py
